--- a/app/src/main/res/layout/fragment_space_setup_success.xml
+++ b/app/src/main/res/layout/fragment_space_setup_success.xml
@@ -40,7 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:importantForAccessibility="no"
-                android:src="@drawable/hands_mobile"
+                android:src="@drawable/hands_mobile_updated"
+                android:paddingVertical="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
