--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,10 +22,8 @@
         <item name="android:windowLightStatusBar">@bool/dayMode</item>
         <item name="android:windowLightNavigationBar">@bool/dayMode</item>
         <item name="navigationViewStyle">@style/NavigationViewStyle</item>
-        <item name="buttonStyle">@style/OAButtonStyle</item>
-        <item name="materialButtonStyle">@style/OAMaterialButtonStyle</item>
         <item name="dialogTheme">@style/AppDialogTheme</item>
-        <item name="bottomSheetDialogTheme">@style/AppBottomSheetTheme</item>
+        <item name="bottomSheetDialogTheme">@style/SaveAppBottomSheetTheme</item>
         <item name="alertDialogTheme">@style/AlertDialogTheme</item>
         <item name="materialAlertDialogTheme">@style/AlertMaterialDialogTheme</item>
         <item name="preferenceTheme">@style/OAPreferenceStyle</item>
@@ -35,12 +33,25 @@
         <item name="toolbarStyle">@style/SaveApp.Widget.MaterialToolbarStyle</item>
 
 
+
+<!--        Button Styles-->
+        <item name="buttonStyle">@style/OAButtonStyle</item>
+        <item name="materialButtonStyle">@style/OAMaterialButtonStyle</item>
+        <item name="materialIconButtonStyle">@style/OAMaterialButtonStyle</item>
+        <item name="borderlessButtonStyle">@style/Widget.App.Button.TextButton</item>
+        <item name="materialButtonOutlinedStyle">@style/Widget.App.Button.OutlinedButton</item>
+
+        <!-- button text style -->
+        <item name="textAppearanceLabelLarge">@style/TextAppearance.App.Button</item>
+
 <!--        For App Bar Action Menu Text Color-->
         <item name="actionMenuTextColor">@color/white</item>
         <item name="android:actionMenuTextColor">@color/white</item>
 
 <!--        Input Layout Style-->
         <item name="textInputStyle">@style/Widget.SaveApp.TextInputLayout</item>
+
+        <item name="textAppearanceTitleLarge">@style/TextAppearance.App.TitleLarge</item>
         <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
         <item name="textAppearanceBodySmall">@style/TextAppearance.App.BodySmall</item>
         <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.SaveApp.SmallComponent</item>
@@ -70,9 +81,18 @@
     <!--        <item name="android:textViewStyle">@style/OATextViewStyle</item>-->
     <!--    </style>-->
 
-    <style name="AppBottomSheetTheme" parent="ThemeOverlay.Material3.DayNight.BottomSheetDialog">
+    <style name="SaveAppBottomSheetTheme" parent="ThemeOverlay.Material3.DayNight.BottomSheetDialog">
+        <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
         <item name="buttonStyle">@style/OAButtonStyle</item>
         <item name="materialButtonStyle">@style/OAMaterialButtonStyle</item>
+    </style>
+
+    <style name="CustomShapeAppearanceBottomSheetDialog" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
     </style>
 
     <style name="App.Custom.BottomNavStyle" parent="Widget.Material3.BottomNavigationView">
@@ -189,6 +209,38 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="Widget.App.Button.TextButton" parent="Widget.Material3.Button.TextButton">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button.TextButton</item>
+        <item name="android:textAppearance">@style/TextAppearance.App.Button</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.App.Button</item>
+    </style>
+
+    <style name="Widget.App.Button.OutlinedButton" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button.TextButton</item>
+        <item name="android:textAppearance">@style/TextAppearance.App.Button</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.App.Button</item>
+    </style>
+
+    <style name="Widget.App.Button" parent="Widget.Material3.Button">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Button</item>
+        <item name="android:textAppearance">@style/TextAppearance.App.Button</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.App.Button</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Button.TextButton" parent="ThemeOverlay.Material3.Button.TextButton">
+        <item name="colorOnContainer">@color/colorTertiary</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Button" parent="ThemeOverlay.Material3.Button">
+        <item name="colorContainer">@color/colorTertiary</item>
+        <item name="colorOnContainer">@color/colorOnPrimary</item>
+    </style>
+
+    <style name="ShapeAppearance.App.Button" parent="">
+        <item name="cornerFamily">cut</item>
+        <item name="cornerSize">4dp</item>
+    </style>
+
     <style name="OAMaterialSignInButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:background">@drawable/button</item>
         <item name="android:textColor">@color/white</item>
@@ -239,6 +291,16 @@
         <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
         <item name="textAppearanceBodySmall">@style/TextAppearance.App.BodySmall</item>
         <item name="editTextStyle">@style/Widget.Material3.TextInputEditText.FilledBox</item>
+    </style>
+
+    <style name="TextAppearance.App.Button" parent="TextAppearance.Material3.LabelLarge">
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+    </style>
+
+    <style name="TextAppearance.App.TitleLarge" parent="TextAppearance.Material3.TitleLarge">
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat</item>
     </style>
 
     <style name="TextAppearance.App.TitleMedium" parent="TextAppearance.Material3.TitleMedium">
