--- a/app/src/main/res/layout/activity_onboarding23.xml
+++ b/app/src/main/res/layout/activity_onboarding23.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/get_started"
-                android:textColor="@color/colorOnboarding23GetStarted"
+                android:textColor="@color/colorText"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -66,7 +66,7 @@
                 android:adjustViewBounds="true"
                 android:paddingTop="8dp"
                 android:src="@drawable/onboarding23_arrow_right"
-                app:tint="@color/colorOnboarding23GetStarted" />
+                app:tint="@color/colorText" />
 
         </LinearLayout>
 
