--- a/app/src/main/res/layout/activity_gdrive.xml
+++ b/app/src/main/res/layout/activity_gdrive.xml
@@ -7,20 +7,15 @@
     android:filterTouchesWhenObscured="true"
     tools:context=".features.onboarding.SpaceSetupActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        android:id="@+id/common_app_bar"
+        layout="@layout/common_app_bar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        app:layout_constraintTop_toBottomOf="@id/common_app_bar">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/gdrive_id_container"
