--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -1,187 +1,173 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <PreferenceCategory
-        app:layout="@layout/prefs_title"
-        app:title="Secure">
+        android:layout="@layout/custom_preference_category"
+        android:summary="Secure your account"
+        android:title="@string/pref_title_secure"
+        app:summary="Secure your account">
 
         <SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:icon="@null"
+            android:iconSpaceReserved="false"
+            android:key="@string/pref_app_passcode"
+            android:layout="@layout/custom_preference_switch"
+            android:singleLineTitle="false"
+            android:summary="6 digit passcode"
+            android:title="Lock app with passcode"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
-            app:defaultValue="false"
+            app:icon="@null"
             app:iconSpaceReserved="false"
-            app:key="passcode_enabled"
-            app:singleLineTitle="false"
-            app:title="Lock app with passcode" />
+            app:layout="@layout/custom_preference_switch"
+            app:summary="6 digit passcode" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
-        app:layout="@layout/prefs_title"
-        app:title="Archive">
+        android:layout="@layout/custom_preference_category"
+        android:title="@string/pref_title_archive">
 
         <Preference
+            android:iconSpaceReserved="false"
+            android:key="@string/pref_media_servers"
+            android:singleLineTitle="true"
+            android:summary="Add or remove media servers"
+            android:title="Media Servers"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:iconSpaceReserved="false"
-            app:key="@string/pref_media_servers"
-            app:singleLineTitle="true"
             app:summary="Add or remove media servers"
             app:title="Media Servers" />
 
         <Preference
+            android:iconSpaceReserved="false"
+            android:key="@string/pref_media_folders"
+            android:layout="@layout/custom_preference"
+            android:singleLineTitle="true"
+            android:summary="Add or remove media folders"
+            android:title="Media Folders"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
-            app:iconSpaceReserved="false"
-            app:key="@string/pref_media_folders"
-            app:singleLineTitle="true"
-            app:summary="Add or remove media folders"
-            app:title="Media Folders" />
+            app:iconSpaceReserved="false" />
 
         <ListPreference
+            android:iconSpaceReserved="false"
+            android:key="media_compression"
+            android:singleLineTitle="true"
+            android:summary="%s"
+            android:title="Media Compression"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:defaultValue="higher_quality"
             app:enabled="false"
             app:entries="@array/array_prefs_media_compression_labels"
             app:entryValues="@array/array_prefs_media_compression_values"
-            app:iconSpaceReserved="false"
-            app:key="media_compression"
-            app:singleLineTitle="true"
-            app:summary="%s"
-            app:title="Media Compression" />
+            app:iconSpaceReserved="false" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
-        app:iconSpaceReserved="false"
-        app:layout="@layout/prefs_title"
-        app:title="Verify">
+        android:iconSpaceReserved="false"
+        android:layout="@layout/custom_preference_category"
+        android:title="Verify"
+        app:iconSpaceReserved="false">
 
         <Preference
-            app:allowDividerAbove="false"
+            android:iconSpaceReserved="false"
+            android:key="proof_mode"
+            android:singleLineTitle="false"
+            android:title="@string/proofmode"
+            app:allowDividerAbove="true"
             app:allowDividerBelow="false"
-            app:iconSpaceReserved="false"
-            app:key="proof_mode"
-            app:singleLineTitle="false"
-            app:title="@string/proofmode" />
+            app:iconSpaceReserved="false" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
-        app:layout="@layout/prefs_title"
-        app:title="Encrypt">
+        android:layout="@layout/custom_preference_category"
+        android:title="Encrypt">
 
         <SwitchPreferenceCompat
             android:enabled="false"
+            android:iconSpaceReserved="false"
+            android:key="use_tor"
+            android:layout="@layout/custom_preference_switch"
+            android:singleLineTitle="false"
+            android:summary="@string/prefs_use_tor_summary"
+            android:title="@string/prefs_use_tor_title"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:defaultValue="false"
             app:enabled="true"
             app:iconSpaceReserved="false"
-            app:key="use_tor"
-            app:singleLineTitle="false"
-            app:summary="@string/prefs_use_tor_summary"
-            app:title="@string/prefs_use_tor_title" />
+            app:layout="@layout/custom_preference_switch" />
     </PreferenceCategory>
 
 
     <PreferenceCategory
-        app:layout="@layout/prefs_title"
-        app:title="General">
+        android:layout="@layout/custom_preference_category"
+        android:title="General">
 
         <SwitchPreferenceCompat
+            android:iconSpaceReserved="false"
+            android:key="upload_wifi_only"
+            android:layout="@layout/custom_preference_switch"
+            android:singleLineTitle="false"
+            android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:defaultValue="false"
             app:iconSpaceReserved="false"
-            app:key="upload_wifi_only"
-            app:singleLineTitle="false"
-            app:title="@string/only_upload_media_when_you_are_connected_to_wi_fi" />
+            app:layout="@layout/custom_preference_switch"
+            app:singleLineTitle="false" />
 
         <ListPreference
+            android:dialogTitle="Themessss"
+            android:iconSpaceReserved="false"
+            android:key="theme"
+            android:singleLineTitle="false"
+            android:summary="%s"
+            android:title="@string/prefs_theme_title"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:defaultValue="@string/prefs_theme_val_system"
             app:entries="@array/ar_prefs_theme_labels"
             app:entryValues="@array/ar_prefs_theme_val"
             app:iconSpaceReserved="false"
-            app:key="theme"
-            app:singleLineTitle="false"
-            app:summary="%s"
-            app:title="@string/prefs_theme_title" />
+            app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
-        app:layout="@layout/prefs_title"
-        app:title="About">
+        android:layout="@layout/custom_preference_category"
+        android:title="About">
 
         <Preference
+            android:iconSpaceReserved="false"
+            android:key="privacy_policy"
+            android:singleLineTitle="true"
+            android:summary="Tap to view our Terms &amp; Privacy Policy"
+            android:title="Terms &amp; Privacy Policy"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:enabled="true"
-            app:iconSpaceReserved="false"
-            app:key="privacy_policy"
-            app:singleLineTitle="true"
-            app:summary="Tap to view our Terms &amp; Privacy Policy"
-            app:title="Terms &amp; Privacy Policy" />
+            app:iconSpaceReserved="false" />
 
         <Preference
+            android:iconSpaceReserved="false"
+            android:key="app_version"
+            android:singleLineTitle="true"
+            android:summary="0.7.2.4783"
+            android:title="Version"
             app:allowDividerAbove="false"
             app:allowDividerBelow="false"
             app:enabled="false"
-            app:iconSpaceReserved="false"
-            app:key="app_version"
-            app:singleLineTitle="true"
-            app:summary="0.7.2.4783"
-            app:title="Version" />
+            app:iconSpaceReserved="false" />
 
     </PreferenceCategory>
-
-    <!--    <PreferenceCategory-->
-    <!--        app:iconSpaceReserved="false"-->
-    <!--        app:layout="@layout/prefs_title"-->
-    <!--        app:title="@string/security">-->
-
-    <!--        <SwitchPreferenceCompat-->
-    <!--            app:allowDividerAbove="false"-->
-    <!--            app:allowDividerBelow="false"-->
-    <!--            app:iconSpaceReserved="false"-->
-    <!--            app:key="use_tor"-->
-    <!--            app:defaultValue="false"-->
-    <!--            app:title="@string/prefs_use_tor_title"-->
-    <!--            app:singleLineTitle="false"-->
-    <!--            app:summary="@string/prefs_use_tor_summary" />-->
-
-    <!--        <SwitchPreferenceCompat-->
-    <!--            app:allowDividerAbove="false"-->
-    <!--            app:allowDividerBelow="false"-->
-    <!--            app:iconSpaceReserved="false"-->
-    <!--            app:key="prohibit_screenshots"-->
-    <!--            app:defaultValue="false"-->
-    <!--            app:title="@string/prefs_prohibit_screenshots_title"-->
-    <!--            app:singleLineTitle="false"-->
-    <!--            app:summary="@string/prefs_prohibit_screenshots_summary" />-->
-
-    <!--    </PreferenceCategory>-->
-
-
-    <!--    <PreferenceCategory-->
-    <!--        app:iconSpaceReserved="false"-->
-    <!--        app:layout="@layout/prefs_title"-->
-    <!--        app:title="@string/health_checks">-->
-
-    <!--        <SwitchPreferenceCompat-->
-    <!--            app:allowDividerAbove="false"-->
-    <!--            app:allowDividerBelow="false"-->
-    <!--            app:iconSpaceReserved="false"-->
-    <!--            app:key="health_checks"-->
-    <!--            app:title="@string/health_checks"-->
-    <!--            app:singleLineTitle="false"-->
-    <!--            app:summary="@string/help_improve_the_app_by_running_health_checks_when_uploads_fail" />-->
-
-    <!--    </PreferenceCategory>-->
 
 </PreferenceScreen>
