--- a/app/src/main/res/layout/custom_preference_category.xml
+++ b/app/src/main/res/layout/custom_preference_category.xml
@@ -29,8 +29,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="3sp"
-        android:textColor="@color/colorText"
-        android:textSize="12sp"
+        android:textColor="@color/colorOnSurface"
+        android:textSize="14sp"
         android:textStyle="normal"
         tools:ignore="SmallSp"
         tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s." />
