--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -14,7 +14,6 @@
             android:icon="@null"
             android:iconSpaceReserved="false"
             android:key="@string/pref_app_passcode"
-            android:layout="@layout/custom_preference_switch"
             android:singleLineTitle="false"
             android:summary="6 digit passcode"
             android:title="Lock app with passcode"
@@ -22,7 +21,6 @@
             app:allowDividerBelow="false"
             app:icon="@null"
             app:iconSpaceReserved="false"
-            app:layout="@layout/custom_preference_switch"
             app:summary="6 digit passcode" />
 
     </PreferenceCategory>
@@ -46,7 +44,6 @@
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_media_folders"
-            android:layout="@layout/custom_preference"
             android:singleLineTitle="true"
             android:summary="Add or remove media folders"
             android:title="Media Folders"
@@ -95,7 +92,6 @@
             android:enabled="false"
             android:iconSpaceReserved="false"
             android:key="use_tor"
-            android:layout="@layout/custom_preference_switch"
             android:singleLineTitle="false"
             android:summary="@string/prefs_use_tor_summary"
             android:title="@string/prefs_use_tor_title"
@@ -103,8 +99,7 @@
             app:allowDividerBelow="false"
             app:defaultValue="false"
             app:enabled="true"
-            app:iconSpaceReserved="false"
-            app:layout="@layout/custom_preference_switch" />
+            app:iconSpaceReserved="false"/>
     </PreferenceCategory>
 
 
@@ -115,14 +110,12 @@
         <SwitchPreferenceCompat
             android:iconSpaceReserved="false"
             android:key="upload_wifi_only"
-            android:layout="@layout/custom_preference_switch"
             android:singleLineTitle="false"
             android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
             app:allowDividerAbove="true"
             app:allowDividerBelow="false"
             app:defaultValue="false"
             app:iconSpaceReserved="false"
-            app:layout="@layout/custom_preference_switch"
             app:singleLineTitle="false" />
 
         <ListPreference
