snowbird changes imported and refactored

--- a/app/src/main/res/layout/common_app_bar.xml
+++ b/app/src/main/res/layout/common_app_bar.xml
@@ -9,7 +9,7 @@
     <com.google.android.material.appbar.MaterialToolbar
         tools:title="OpenArchive"
         tools:navigationIcon="@drawable/ic_arrow_back"
-        tools:menu="@menu/menu_folder_list"
+        tools:menu="@menu/menu_main"
         android:id="@+id/common_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
