--- a/app/src/main/res/layout/fragment_snowbird_list_groups.xml
+++ b/app/src/main/res/layout/fragment_snowbird_list_groups.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:filterTouchesWhenObscured="true"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -18,6 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <net.opendasharchive.openarchive.features.main.ui.EmptyableRecyclerView
+            tools:listitem="@layout/one_line_row"
             android:id="@+id/group_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
