removed temp snowbird menu

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -22,10 +22,10 @@
         android:visible="false"
         app:showAsAction="always" />
 
-    <item
-        android:id="@+id/snowbird_menu"
-        android:icon="@drawable/snowbird"
-        android:title="Snowbird"
-        app:showAsAction="always" />
+<!--    <item-->
+<!--        android:id="@+id/snowbird_menu"-->
+<!--        android:icon="@drawable/snowbird"-->
+<!--        android:title="Snowbird"-->
+<!--        app:showAsAction="always" />-->
 
 </menu>
