--- a/app/src/main/res/layout/fragment_space_setup.xml
+++ b/app/src/main/res/layout/fragment_space_setup.xml
@@ -185,7 +185,8 @@
             android:layout_marginVertical="16dp"
             android:background="@drawable/item_background_selector"
             android:orientation="horizontal"
-            android:padding="4dp">
+            android:padding="4dp"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/icon_snowbird"
