app-masking POC

--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -19,6 +19,17 @@
             app:iconSpaceReserved="false"
             app:summary="6 digit passcode" />
 
+        <Preference
+            android:defaultValue="false"
+            android:icon="@null"
+            android:iconSpaceReserved="false"
+            android:key="@string/pref_app_masking"
+            android:singleLineTitle="false"
+            android:title="App Masking"
+            app:icon="@null"
+            app:iconSpaceReserved="false"
+            app:summary="Hide save app" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
