Commented the implementation

--- a/app/src/main/res/layout/custom_preference_switch.xml
+++ b/app/src/main/res/layout/custom_preference_switch.xml
@@ -52,10 +52,8 @@
     </RelativeLayout>
 
     <com.google.android.material.materialswitch.MaterialSwitch
-        android:id="@android:id/checkbox"
+        android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:clickable="false"
-        android:focusable="false" />
+        android:background="@null" />
 </LinearLayout>
