--- a/app/src/main/res/drawable/bottom_nav_background.xml
+++ b/app/src/main/res/drawable/bottom_nav_background.xml
@@ -4,10 +4,11 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorBottomNavbar" />
-<!--            <corners android:radius="16dp" />-->
+            <corners android:radius="8dp" />
         </shape>
     </item>
-    <item android:top="16dp">
+
+    <item android:top="8dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorBottomNavbar" />
         </shape>
