--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -174,6 +174,8 @@
                         android:text="Select Media"
                         android:textFontWeight="600"
                         android:textSize="16sp" />
+
+
                 </LinearLayout>
 
                 <!-- Delete (Remove) Button Layout for selection mode -->
@@ -196,11 +198,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:drawablePadding="8dp"
                         android:text="Remove"
                         android:textColor="@color/colorError"
                         android:textFontWeight="600"
                         android:textSize="16sp"
-                        android:drawablePadding="8dp"
                         app:drawableStartCompat="@drawable/ic_trash"
                         app:drawableTint="@color/colorError" />
 
@@ -246,13 +248,30 @@
                         android:visibility="invisible"
                         app:tint="@color/colorOnBackground" />
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/et_folder_name"
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Enter folder name"
-                        android:textFontWeight="600"
-                        android:textSize="16sp" />
+                        android:layout_height="wrap_content"
+                        app:hintEnabled="false"
+                        android:layout_marginEnd="24dp"
+                        app:errorEnabled="false"
+                        android:minHeight="36dp"
+                        app:boxBackgroundColor="@color/colorSurface"
+                        app:boxBackgroundMode="none"
+                        app:boxCollapsedPaddingTop="0dp"
+                        app:boxStrokeWidth="0dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_folder_name"
+                            android:layout_width="match_parent"
+                            android:singleLine="true"
+
+                            android:maxLines="1"
+                            android:layout_height="wrap_content"
+                            android:imeOptions="actionDone"
+                            android:textFontWeight="600"
+                            android:textSize="16sp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
