--- a/app/src/main/res/layout/fragment_space_setup_success.xml
+++ b/app/src/main/res/layout/fragment_space_setup_success.xml
@@ -52,7 +52,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_authenticate"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:padding="@dimen/activity_row_padding"
