--- a/app/src/main/res/layout/fragment_web_dav.xml
+++ b/app/src/main/res/layout/fragment_web_dav.xml
@@ -44,13 +44,14 @@
                     android:background="@drawable/circle_shape"
                     android:backgroundTint="@color/colorBackgroundSpaceIcon"
                     android:importantForAccessibility="no"
-                    android:padding="12dp"
+                    android:padding="8dp"
                     android:src="@drawable/ic_private_server"
                     app:tint="@color/colorTertiary" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingEnd="23dp"
                     android:layout_gravity="center_vertical"
                     android:orientation="vertical">
 
@@ -65,6 +66,7 @@
                         tools:targetApi="p" />
 
                     <TextView
+                        android:paddingEnd="32dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/save_connects_to_webdav_compatible_servers_only_such_as_nextcloud_and_owncloud" />
