--- a/app/src/main/res/layout/activity_onboarding23.xml
+++ b/app/src/main/res/layout/activity_onboarding23.xml
@@ -43,20 +43,22 @@
             android:id="@+id/get_started"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:orientation="vertical"
-            android:paddingLeft="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:paddingRight="20dp"
             android:paddingBottom="10dp">
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/get_started"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:layout_marginEnd="16dp"
+                android:textSize="18sp"
+                android:textFontWeight="600"
                 android:textStyle="bold" />
 
             <ImageView
@@ -64,9 +66,9 @@
                 android:layout_width="24dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:paddingTop="8dp"
                 android:src="@drawable/onboarding23_arrow_right"
                 app:tint="@color/colorText" />
+
 
         </LinearLayout>
 
