--- a/app/src/main/res/layout/fragment_main_media.xml
+++ b/app/src/main/res/layout/fragment_main_media.xml
@@ -41,8 +41,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:targetApi="p" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_welcome_descr"
@@ -61,7 +60,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_welcome"
-            tools:targetApi="p" />
+             />
 
         <LinearLayout
             android:id="@+id/img_welcome_arrow_layout"
