--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="light_grey">#9e9e9e</color>
     <color name="grey">#757575</color>
     <color name="dark_grey">#424242</color>
+    <color name="text_grey">#434343</color>
     <color name="light_black">#212121</color>
     <color name="brand_accent">#A92E33</color>
 
@@ -97,6 +98,7 @@
 
     <color name="colorSurface">#F5F1E7</color>
     <color name="colorOnSurface">@color/c23_dark_grey</color>
+    <color name="colorOnSurfaceVariant">@color/text_grey</color>
 
     <color name="colorTertiary">@color/c23_teal</color>
     <color name="colorText">@color/c23_dark_grey</color>
