--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -26,22 +26,31 @@
         android:title="@string/pref_title_archive"
         app:allowDividerAbove="true">
 
+        <SwitchPreferenceCompat
+            android:iconSpaceReserved="false"
+            android:key="upload_wifi_only"
+            android:singleLineTitle="false"
+            android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
+            app:defaultValue="false"
+            app:iconSpaceReserved="false"
+            app:singleLineTitle="false" />
+
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_media_servers"
             android:singleLineTitle="true"
-            android:summary="Add or remove media servers"
-            android:title="Media Servers"
+            android:summary="@string/pref_summary_media_servers"
+            android:title="@string/pref_title_media_servers"
             app:iconSpaceReserved="false"
-            app:summary="Add or remove media servers"
+            app:summary="@string/pref_summary_media_servers"
             app:title="Media Servers" />
 
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_media_folders"
             android:singleLineTitle="true"
-            android:summary="Add or remove media folders"
-            android:title="Media Folders"
+            android:summary="@string/pref_summary_media_folders"
+            android:title="@string/pref_title_media_folders"
             app:iconSpaceReserved="false" />
 
         <!--        <ListPreference-->
@@ -95,15 +104,6 @@
     <PreferenceCategory
         android:layout="@layout/custom_preference_category"
         android:title="General">
-
-        <SwitchPreferenceCompat
-            android:iconSpaceReserved="false"
-            android:key="upload_wifi_only"
-            android:singleLineTitle="false"
-            android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
-            app:defaultValue="false"
-            app:iconSpaceReserved="false"
-            app:singleLineTitle="false" />
 
         <ListPreference
             android:dialogTitle="Theme"
